// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput rendering renders expected elements 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__tag"
    data-index={0}
    onRemove={[Function]}
    removeTitle="Remove foo"
    type="gray"
  >
    foo
  </Tag>
  <Tag
    className="TagInput__tag"
    data-index={1}
    onRemove={[Function]}
    removeTitle="Remove bar"
    type="gray"
  >
    bar
  </Tag>
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__tag"
    data-index={0}
    onRemove={null}
    removeTitle="Remove foo"
    type="gray"
  >
    foo
  </Tag>
  <Tag
    aria-disabled={true}
    className="TagInput__tag"
    data-index={1}
    onRemove={null}
    removeTitle="Remove bar"
    type="gray"
  >
    bar
  </Tag>
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when disabled and defaultTags is set 1`] = `
<Layer
  className="TagInput TagInput--disabled"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    aria-disabled={true}
    className="TagInput__defaultTag"
    type="gray"
  >
    foo
  </Tag>
  <Tag
    aria-disabled={true}
    className="TagInput__defaultTag"
    type="gray"
  >
    bar
  </Tag>
  <input
    aria-invalid={false}
    className="TagInput__input"
    disabled={true}
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when optional properties are set 1`] = `
<Layer
  className="TagInput TagInput--error TestClass"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__tag"
    data-index={0}
    onRemove={[Function]}
    removeTitle="Remove foo"
    type="gray"
  >
    foo
  </Tag>
  <Tag
    className="TagInput__tag"
    data-index={1}
    onRemove={[Function]}
    removeTitle="Remove bar"
    type="gray"
  >
    bar
  </Tag>
  <input
    aria-invalid={true}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is not set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;

exports[`TagInput rendering renders expected elements when tags is empty and defaultTags is set 1`] = `
<Layer
  className="TagInput"
  id="random-id-tags"
>
  <span
    aria-live="assertive"
    className="sr-only"
  />
  <Tag
    className="TagInput__defaultTag"
    type="gray"
  >
    foo
  </Tag>
  <Tag
    className="TagInput__defaultTag"
    type="gray"
  >
    bar
  </Tag>
  <input
    aria-invalid={false}
    className="TagInput__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</Layer>
`;
